--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             </dependency>
             <dependency>
                 <groupId>io.lalahtalks</groupId>
+                <artifactId>paging-dto</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>io.lalahtalks</groupId>
                 <artifactId>problem-spring-boot-starter</artifactId>
                 <version>${starter.version}</version>
             </dependency>
