--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     </parent>
 
     <artifactId>secrets-client</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
-        <starter.version>1.0-SNAPSHOT</starter.version>
+        <paging.version>1.0-SNAPSHOT</paging.version>
+        <spring-starters.version>1.0-SNAPSHOT</spring-starters.version>
     </properties>
 
     <modules>
@@ -23,18 +24,6 @@
         <module>secrets-client-http-contract</module>
         <module>secrets-client-http-spring-boot-starter</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -51,17 +40,17 @@
             <dependency>
                 <groupId>io.lalahtalks</groupId>
                 <artifactId>http-client-spring-boot-starter</artifactId>
-                <version>${starter.version}</version>
+                <version>${spring-starters.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.lalahtalks</groupId>
                 <artifactId>paging-dto</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${paging.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.lalahtalks</groupId>
                 <artifactId>problem-spring-boot-starter</artifactId>
-                <version>${starter.version}</version>
+                <version>${spring-starters.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
