--- a/secrets-client-http-spring-boot-starter/pom.xml
+++ b/secrets-client-http-spring-boot-starter/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>http-client-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-contract-wiremock</artifactId>
             <scope>test</scope>
